#7 Добавлены права доступа для Monocle